--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
     <link rel="stylesheet" href="style.css">
-    <script src="index.js" defer></script>
 </head>
 <body>
     <div class="container">
-        <h1>Todo List</h1>
+        <h1 id="todoTitle">Todo List</h1>
         <div class="input-section">
             <input type="text" id="todoInput" pattern="" placeholder="Add a new task...">
             <button id="addButton">Add</button>
@@ -18,5 +17,62 @@
             
         </div>
     </div>
+
+    <script>
+      let items = []
+
+      const addButton = document.getElementById('addButton')
+      const todoInput = document.getElementById('todoInput')
+      const todoList = document.getElementById('todoList')
+
+      function addTodo() {
+        const todoText = todoInput.value.trim()
+       if(todoText){
+        items.push({
+          id: items.length + 1,
+          text: todoText,
+          completed: false
+        })
+       }
+       todoInput.value= ''
+       renderTodos()
+      }
+
+      addButton.addEventListener('click', () => {
+        addTodo()
+      })
+
+      function toggleTodo(id){
+        items = items.map(item => {
+          if(item.id === id){
+            return {...item, completed: !item.completed}
+          }
+          return item
+        })
+        renderTodos()
+      }
+
+      function renderTodos(){
+    const todoList = document.getElementById('todoList')
+    todoList.innerHTML = ''
+
+    items.forEach(item => {
+        const todoItem = document.createElement('div')
+        todoItem.className = `todo-item ${item.completed ? 'completed' : ''}`
+
+        todoItem.innerHTML = `
+           <input type="checkbox" 
+                           ${item.completed ? 'checked' : ''} 
+                           onchange="toggleTodo(${item.id})">
+                    <span class="todo-text">${item.text}</span>
+                    <button class="delete-btn" onclick="deleteTodo(${item.id})">Delete</button>
+        `
+
+        todoList.appendChild(todoItem)
+    })
+}
+
+        
+    </script>
 </body>
 </html>
